# rust_template

./: Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: rust.yml
example/: test.c
src/: lib.rs
